--- a/src/app/home/pages/home/home.component.html
+++ b/src/app/home/pages/home/home.component.html
@@ -2,6 +2,10 @@
 <div class="container">
 
   <div class="content">
+
+    <h1>hello</h1>
+    <h1>{{'welcome' | translate}} <- here</h1>
+
     <img src="https://hign.org/sites/default/files/carousel-images/2022-02/iStock-945439872.jpg " alt="">
 
     <div class="phrase">
