--- a/src/app/share/toolbar/toolbar.component.html
+++ b/src/app/share/toolbar/toolbar.component.html
@@ -4,6 +4,17 @@
 
   <span class="space"></span>
 
+  <div class="language">
+    <div class="language">
+      <select (change)="changeLanguage($any($event.target).value)">
+        @for (lang of languages; track lang) {
+          <option [value]="lang">{{ lang }}</option>
+        }
+      </select>
+    </div>
+  </div>
+
+
   <div class="options">
     <a href="home">Home</a>
     <a href="nursing/mental-state-exams">Mental State Exams</a>
